# protobuf

./: .gitignore  README.md
cpp_server/: CMakeLists.txt  README.md
cpp_server/src/: main.cpp
cpp_server/src/protobuf/: event.pb.cc  event.pb.h
cpp_server/src/server/: socket_server.cpp  socket_server.h
java_client/: README.md  build.gradle
java_client/javaDoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
java_client/javaDoc/com/protobuf/example/demo/: DemoApplication.html  DemoApplicationTests.html  package-frame.html  package-summary.html  package-tree.html
java_client/javaDoc/com/protobuf/example/demo/config/: ExceptionControllerAdvice.html  SwaggerConfig.html  package-frame.html  package-summary.html  package-tree.html
java_client/javaDoc/com/protobuf/example/demo/controller/: EventsController.html  package-frame.html  package-summary.html  package-tree.html
java_client/javaDoc/com/protobuf/example/demo/dto/: EventDto.html  package-frame.html  package-summary.html  package-tree.html
java_client/javaDoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
java_client/src/main/resources/: application.yaml
protobuf/: event.proto
(+34 files in other folders)
